add article_selector to config

--- a/config.json
+++ b/config.json
@@ -2,7 +2,16 @@
   "filters": [
     {
       "type": "KeywordsFilter",
-      "keywords": ["Article 1","Zweepen","spoorwegpersoneel"]
+      "keywords":  ["windkracht", "windenergie", "windenergiebranche", "windturbine", "windstroom",
+  "zonne-energie", "zonnewarmte", "zonnestraling", "geothermische energie", "aardwarmte",
+  "waterkracht", "waterkrachtcentrale", "waterkrachtwerken", "waterstof", "waterstofenergie",
+  "hydroturbine", "getijden-energie", "ethanol-produktie", "ethanol"]
     }
-  ]
+  ],
+  "article_selector":
+    {
+      "type": "threshold",
+      "value": "0.02"
+    }
+
 }
