--- a/config.json
+++ b/config.json
@@ -1,13 +1,28 @@
 {
-  "filters": [
-    {
-      "type": "KeywordsFilter",
-      "keywords":  ["windkracht", "windenergie", "windenergiebranche", "windturbine", "windstroom",
-  "zonne-energie", "zonnewarmte", "zonnestraling", "geothermische energie", "aardwarmte",
-  "waterkracht", "waterkrachtcentrale", "waterkrachtwerken", "waterstof", "waterstofenergie",
-  "hydroturbine", "getijden-energie", "ethanol-produktie", "ethanol"]
-    }
-  ],
+ "filters": [
+        {
+            "type": "AndFilter",
+                "filters": [
+                        {
+                            "type": "YearFilter",
+                            "start_year": 1800,
+                            "end_year": 1910
+                        },
+                        {
+                            "type": "NotFilter",
+                            "filter": {
+                                "type": "ArticleTitleFilter",
+                                "article_title": "Advertentie"
+                            },
+                            "level": "article"
+                        },
+                        {
+                            "type": "KeywordsFilter",
+                            "keywords": ["sustainability", "green"]
+                        }
+                ]
+        }
+ ],
   "article_selector":
     {
       "type": "percentage",
